[package]
name = "arpg"

edition = "2021"
publish = false
rust-version = {workspace = true}
version = {workspace = true}

[dependencies]
ambient_api = {workspace = true}

[[bin]]
name = "client_arpg"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_arpg"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
